--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.9",
     "@react-native-community/masked-view": "^0.1.0",
     "@react-navigation/material-top-tabs": "5.2.18",
     "@react-navigation/native": "5.7.5",
