--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-navigation/native": "5.7.5",
     "@react-navigation/routers": "^6.0.1",
     "@react-navigation/stack": "5.9.2",
-    "expo": "~39.0.2",
+    "expo": "^43.0.3",
     "expo-status-bar": "~1.0.2",
     "firebase": "7.9.0",
     "native-base": "^2.15.2",
